Adición de Readme.md y link repo

--- a/error.html
+++ b/error.html
@@ -15,23 +15,25 @@
   </head>
   <body>
     <header class="header">
-      <img
+      <a href="./index.html">
+        <img
         class="header__img"
         src="./assets/images/logo-platzi-video-BW2-V.2.png"
         alt="Logo de PlatziVideo"
       />
+      </a>
     </header>
     <main>
       <section class="error-404">
         <article class="error-404__container">
           <p class="number-404">404</p>
-          <p class="page-not-found">Página no encontrada</p>    
-        </article>             
+          <p class="page-not-found">Página no encontrada</p>
+        </article>
       </section>
     </main>
     <footer>
       <a href="#">Terminos y condiciones</a>
-      <a href="#">Made with 💚 by MauricioJCarrillo</a>
+      <p>Made with 💡 by <a href="https://github.com/MauricioJCarrillo/5.curso_frontend_developer_platzi">@MauricioJCarrillo</a></p>
     </footer>
   </body>
 </html>
