--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
   </head>
   <body>
     <header class="header">
-      <img
+      <a href="index.html">
+        <img
         class="header__img"
         src="./assets/images/logo-platzi-video-BW2-V.2.png"
         alt="Logo de PlatziVideo"
-      />
+        />
+      </a>
       <nav class="header__menu">
         <div class="header__menu-profile">
           <img
@@ -30,8 +32,8 @@
           <p>Perfil</p>
         </div>
         <ul>
-          <li><a href="/">Cuenta</a></li>
-          <li><a href="/">Cerrar sesión</a></li>
+          <li><a href="./login.html">Cuenta</a></li>
+          <li><a href="./error.html">Cerrar sesión</a></li>
         </ul>
       </nav>
     </header>
@@ -57,7 +59,7 @@
                 <img src="./assets/icons/icons8-plus-64.png" alt="Icono de plus">
               </div>
               <p class="carousel-card__details-title">Titulo descriptivo</p>
-              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>              
+              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>
             </div>
           </article>
           <!--Carousel card # 2-->
@@ -69,7 +71,7 @@
                 <img src="./assets/icons/icons8-plus-64.png" alt="Icono de plus">
               </div>
               <p class="carousel-card__details-title">Titulo descriptivo</p>
-              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>              
+              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>
             </div>
           </article>
           <!--Carousel card # 3-->
@@ -81,7 +83,7 @@
                 <img src="./assets/icons/icons8-plus-64.png" alt="Icono de plus">
               </div>
               <p class="carousel-card__details-title">Titulo descriptivo</p>
-              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>              
+              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>
             </div>
           </article>
           <!--Carousel card # 4-->
@@ -93,7 +95,7 @@
                 <img src="./assets/icons/icons8-plus-64.png" alt="Icono de plus">
               </div>
               <p class="carousel-card__details-title">Titulo descriptivo</p>
-              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>              
+              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>
             </div>
           </article>
           <!--Carousel card # 5-->
@@ -105,7 +107,7 @@
                 <img src="./assets/icons/icons8-plus-64.png" alt="Icono de plus">
               </div>
               <p class="carousel-card__details-title">Titulo descriptivo</p>
-              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>              
+              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>
             </div>
           </article>
           <!--Carousel card # 6-->
@@ -117,7 +119,7 @@
                 <img src="./assets/icons/icons8-plus-64.png" alt="Icono de plus">
               </div>
               <p class="carousel-card__details-title">Titulo descriptivo</p>
-              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>              
+              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>
             </div>
           </article>
           <!--Carousel card # 7-->
@@ -129,15 +131,15 @@
                 <img src="./assets/icons/icons8-plus-64.png" alt="Icono de plus">
               </div>
               <p class="carousel-card__details-title">Titulo descriptivo</p>
-              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>              
+              <p class="carousel-card__details-subtitle">2019 16+ 114 minutos</p>
             </div>
-          </article>          
+          </article>
         </section>
       </section>
     </main>
     <footer>
       <a href="#">Terminos y condiciones</a>
-      <a href="#">Made with 💚 by MauricioJCarrillo</a>
+      <p>Made with 💡 by <a href="https://github.com/MauricioJCarrillo/5.curso_frontend_developer_platzi">@MauricioJCarrillo</a></p>
     </footer>
   </body>
 </html>
