--- a/login.html
+++ b/login.html
@@ -15,11 +15,13 @@
   </head>
   <body>
     <header class="header">
-      <img
+      <a href="./index.html">
+        <img
         class="header__img"
         src="./assets/images/logo-platzi-video-BW2-V.2.png"
         alt="Logo de PlatziVideo"
       />
+      </a>
     </header>
     <main>
       <section class="login">
@@ -32,9 +34,9 @@
           </form>
           <article class="login__remember-me-container">
             <div>
-              <input type="checkbox" name="user_remember" value="checkbox" id="check"> 
-              <label for="check">Recuerdame</label> 
-            </div>            
+              <input type="checkbox" name="user_remember" value="checkbox" id="check">
+              <label for="check">Recuerdame</label>
+            </div>
             <a href="#">Olvidé mi contraseña</a>
           </article>
           <article class="login__social-media-container">
@@ -46,14 +48,14 @@
               <img src="./assets/icons/icons8-twitter-50.png" alt="Icono de twitter">
               <p>Inicia sesión con Twitter</p>
             </div>
-          </article>          
+          </article>
           <p class="login__register-container">No tienes ninguna cuenta <a href="./register.html">Regístrate</a></p>
         </section>
       </section>
     </main>
     <footer>
       <a href="#">Terminos y condiciones</a>
-      <a href="#">Made with 💚 by MauricioJCarrillo</a>
+      <p>Made with 💡 by <a href="https://github.com/MauricioJCarrillo/5.curso_frontend_developer_platzi">@MauricioJCarrillo</a></p>
     </footer>
   </body>
 </html>
