--- a/register.html
+++ b/register.html
@@ -15,11 +15,13 @@
   </head>
   <body>
     <header class="header">
-      <img
+      <a href="./index.html">
+        <img
         class="header__img"
         src="./assets/images/logo-platzi-video-BW2-V.2.png"
         alt="Logo de PlatziVideo"
       />
+      </a>
     </header>
     <main>
       <section class="login">
@@ -30,14 +32,14 @@
             <input class="login__input" type="email" name="user_email" placeholder="Correo">
             <input class="login__input" type="password" name="user_password" placeholder="Contraseña">
             <input class="login__button" type="submit" value="Registrarme">
-          </form>       
+          </form>
           <a class="link-login" href="./login.html">Iniciar sesión</a>
         </section>
       </section>
     </main>
     <footer>
       <a href="#">Terminos y condiciones</a>
-      <a href="#">Made with 💚 by MauricioJCarrillo</a>
+      <p>Made with 💡 by <a href="https://github.com/MauricioJCarrillo/5.curso_frontend_developer_platzi">@MauricioJCarrillo</a></p>
     </footer>
   </body>
 </html>
